--- Release 2.1.2 ----

2012-10-27 Guido Scholz <guido.scholz@bayernline.de>
	* src/loconet.c: Improve getaddrinfo() usage to loop over every
	returned network address.
	* src/ib.c: Resort code to make forward declarations obsolete.

2012-03-26 André Schenk <andre_schenk@users.sourceforge.net>
	* src/ib.c: Fix usage of XEvtLok

2011-10-06 André Schenk <andre_schenk@users.sourceforge.net>
	* src/srcp-ga.c src/srcp-ga.h src/srcp-command.c: Add missing
	TERM GA function

2010-12-01 Guido Scholz <guido.scholz@bayernline.de>
	* src/li100.c: Fix GA feedback address nibble mask

2010-03-16 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-gl.c: Clean up GL address validity check. Patch
	provided by Harald Barth.


--- Release 2.1.1 ----

2010-03-04 Guido Scholz <guido.scholz@bayernline.de>
	* srcp-fb.*, srcp-info.c, srcp-command.c: Fixed undelivered
	INFO messages caused by sizeof(msg).

2010-03-03 Guido Scholz <guido.scholz@bayernline.de>
	* i2c-dev.*: Fixed opensuse compile error, unused function
	parameters removed

2010-03-01 Guido Scholz <guido.scholz@bayernline.de>
	* loconet.c: Fixed Loconet module init routine.


--- Release 2.1.0 ----

2010-02-21 Guido Scholz <guido.scholz@bayernline.de>
	* ddl-s88.*: FreeBSD compile errors fixed.

2010-01-09 Guido Scholz <guido.scholz@bayernline.de>
	* ddl.c, srcpd.conf.5: Default value for usleep_patch in DDL
	module set to "yes".

2009-12-27 Matthias Trute <mtrute@users.sourceforge.net>
	* src/loconet.[ch]: use an input buffer to accumulate serial
	 characters until a complete loconet packet is received.

2009-12-20 Matthias Trute <mtrute@users.sourceforge.net>
	* src/loconet.c: renamed setting names: loconetID -> loconet-id
	  and getTIME to sync-time-from-loconet, activated DESCRIOPTION

2009-12-19 Guido Scholz <guido.scholz@bayernline.de>
	* man/*: Content of English and German manual pages aligned.
	* srcpd.conf.5, de/srcpd.conf.5: Example bus sections for ddl,